--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = djangocms-events
-version = 0.1.0
+version = 0.1.1
 description = Events list and calendar for django CMS
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
@@ -33,3 +33,8 @@ install_requires =
     django-cms >= 3.11
     easy_thumbnails
     django-quill-editor
+    ics >= 0.7.2
+    requests >= 2.28.1
+    arrow >= 1.2.3
+    django-filer >= 2.2.3
+
