Use hatchling intead of setuptools as build system

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include LICENSE
+include LICENSE.txt
 include README.md
 recursive-include djangocms_events/static *
 recursive-include djangocms_events/templates *
