--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     rev: v0.0.290
     hooks:
       - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: https://github.com/pycqa/flake8
     rev: '6.1.0'  # pick a git hash / tag to point to
