--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,22 @@ SPLIT_BEFORE_BITWISE_OPERATOR = true
 SPLIT_BEFORE_ARITHMETIC_OPERATOR = true
 SPLIT_BEFORE_LOGICAL_OPERATOR = true
 SPLIT_BEFORE_DOT = true
+
+[tool.ruff]
+target-version = "py39"
+line-length = 120
+select = [
+    "E",  # pycodestyle error
+    "W",  # pycodestyle warning
+    "F",  # Pyflakes
+    "I",  # isort
+    "UP",  # pyupgrade
+    "DJ",  # flake8-django
+]
+ignore = [
+]
+unfixable = [
+    "F841",  # unused variable
+]
+# Enumerate all fixed violations.
+show-fixes = true
