--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "djangocms-events"
-version = "0.1.3"
+dynamic = ["version"]
 authors = [
   { name="Jens-Erik Weber", email="web@passiv.de" },
 ]
@@ -44,6 +44,9 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/MacLake/djangocms-events"
 repository = "https://github.com/MacLake/djangocms-events.git"
+
+[tool.hatch.version]
+path = "src/djangocms_events/__about__.py"
 
 [tool.yapf]
 based_on_style = "facebook"
