--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.1.1
+    rev: v0.1.5
     hooks:
       - id: ruff
         args: [ --fix, --exit-non-zero-on-fix ]
@@ -12,6 +12,24 @@ repos:
     rev: '6.1.0'  # pick a git hash / tag to point to
     hooks:
       - id: flake8
+
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: "1.15.0"
+    hooks:
+      - id: django-upgrade
+        args: [ --target-version, "4.2" ]   # Django version
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: check-ast
+      - id: check-json
+      - id: check-toml
+      - id: check-xml
+      - id: check-yaml
+      - id: check-merge-conflict
+      - id: mixed-line-ending
+      - id: check-symlinks
 
   - repo: https://github.com/google/yapf
     rev: 'v0.40.2'
